First cv commit

--- a/cv.qmd
+++ b/cv.qmd
@@ -21,10 +21,50 @@ toc: false
 }
 </style>
 ```
-# **2024**
+# **Research experience**
 
-# 2023
+## **Feb. 2024-Feb. 2026**
 
-# 2022
+-   Post-Doctoral Position, sDiv Synthesis Center, iDiv Center for intergrative Biodiversity Research (Halle-Jena-Leipzig). "Unraveling the relationship between genetic diversity, the latitudinal gradient in biodiversity, and life-history strategies". Supervision: Chloé Schmidt, Michael Gerth, Jonathan Chase.
 
-# 2021
+## 2020-2024
+
+-   Career Break
+
+## **2015-2020**
+
+-   Doctoral Student, Molecular Genetic Lab (led by Linda Vigilant) and Gorilla Behavioral Ecology Group (led by Martha Robbins), Department of Primatology, Max Planck Institute for Evolutionary Anthropology. "Genetic population monitoring of African great apes".
+
+## 2013-2014
+
+-   Volunteer field research assistant (Gabon). MPI-EVA. Led by Prof. Dr. Christophe Boesch and Dr. Martha Robbins
+
+## 2012-2013
+
+-   Research Assistant, Molecular Genetic Lab (led by Linda Vigilant)
+
+# Education
+
+## 2020
+
+-   Dr. rer. Nat (PhD) Max Planck Institute for Evolutionary Anthropology (MPI-EVA) and Leipzig University
+
+## 2012
+
+-   Erasmus Mundus Master Programme in Evolutionary Biology (MEME) Master of Science - University of Montpellier 2 (France) Master of Science - Uppsala University (Sweden)
+
+## 2009
+
+-   Bachelor of Science Biology of Organisms, University Montpellier 2 (France)
+
+# Grants & Funding
+
+## 2024
+
+-   sDiv PostDoc Call: 72000€
+
+# Consultance and Free-lance
+
+## 2023
+
+-   Consultant for the BonDiv project, led by Prof. Hjalmar Kühl, Dr. Erin Wessling and Dr. Martin Surbeck. iDiv Leipzig.
