--- a/publications.qmd
+++ b/publications.qmd
@@ -1,8 +1,30 @@
 ---
 title: "Publications"
-title-block-banner: "assets/images/Lake-Bunyoni-Uganda.jpg"
+title-block-banner: "/assets/images/Lake-Bunyoni-Uganda.jpg"
 toc: false
 ---
+
+# First-authored publications
+
+*A.‐C. Granjon*, M. M. Robbins, J. Arinaitwe, M. R. Cranfield, W. Eckardt, I. Mburanumwe, A. Musana, A. M. Robbins, J. Roy, R. Sollmann, L. Vigilant, J. R. Hickey, Estimating abundance and growth rates in a wild mountain gorilla population. *Animal Conservation* **23**, 455–465 (2020).
+
+**A.-C. Granjon**, C. Rowney, L. Vigilant, K. E. Langergraber, Evaluating genetic capture-recapture using a chimpanzee population of known size. *The Journal of Wildlife Management* **81**, 279–288 (2017).
+
+
+# 2025
+
+Kazaba, Paul K., Lars Kulik, Ghislain B. Beukou Choumbou, Christelle B. Douhin Tiémoko, Funmilayo L. Oni, Serge A. Kamgang, Stefanie Heinicke, Inza Koné, Samedi Jean Pierre Mucyo, Tenekwetche Sop, Christophe Boesch, Colleen Stephens, Anthony Agbor, Samuel Angedakin, Emma Bailey, Mattia Bessone, Charlotte Coupland, Tobias Deschner, Paula Dieguez, _Anne-Céline Granjon_, Briana Harder, Josephine Head, Thurston Cleveland Hicks, Sorrel Jones, Parag Kadam, Ammie K. Kalan, Kevin E. Langergraber, Juan Lapuente, Kevin C. Lee, Laura K. Lynn, Nuria Maldonado, Maureen S. McCarthy, Amelia C. Meier, Lucy Jayne Ormsby, Alex Piel, Martha M. Robbins, Lilah Sciaky, Volker Sommer, Fiona A. Stewart, Jane Widness, Roman M. Wittig, Erin G. Wessling, Mimi Arandjelovic, Hjalmar Kühl, Yntze van der Hoek. 2025. “Chimpanzees (Pan Troglodytes) Indicate Mammalian Abundance Across Broad Spatial Scales.” Ecology and Evolution 15 (3): e71000. https://doi.org/10.1002/ece3.71000.
+
+
+Ostridge, Harrison J., Claudia Fontsere, Esther Lizano, Daniela C. Soto, Joshua M. Schmidt, Vrishti Saxena, Marina Alvarez-Estape,  Christopher D. Barratt, Paolo Gratton, Gaëlle Bocksberger, Jack D. Lester, Paula Dieguez, Anthony Agbor, Samuel Angedakin, Alfred Kwabena Assumang , Emma Bailey, Donatienne Barubiyo, Mattia Bessone, Gregory Brazzola, Rebecca Chancellor, Heather Cohen,  Coupland, Emmanuel Danquah, Tobias Deschner, Laia Dotras, Jef Dupain, Villard Ebot Egbe, Anne-Céline Granjon, Josephine Head, Daniela Hedwig, Veerle Hermans, R. Adriana Hernandez-Aguilar, Kathryn J. Jeffery, Sorrel Jones, Jessica Junker, Parag Kadam, Michael Kaiser, Ammie K. Kalan, Mbangi Kambere, Ivonne Kienast, Deo Kujirakwinja, Kevin E. Langergraber, Juan Lapuente, Bradley Larson, Anne Laudisoit, Kevin C. Lee, Manuel Llana, Giovanna Maretti, Rumen Martín, Amelia C. Meier, David Morgan, Emily Neil, Sonia Nicholl, Stuart Nixon, Emmanuelle Normand, Christopher Orbell, Lucy Jayne Ormsby, Robinson Orume, Liliana Pacheco, Jodie Preece, Sebastien Regnaut, Martha M. Robbins, Aaron Rundus, Crickette Sanz, Lilah Sciaky, Volker Sommer, Fiona A. Stewart, Nikki Tagg, Luc Roscelin Tédonzong, Joost van Schijndel, Elleni Vendras, Erin G. Wessling, Jacob Willie, Roman M. Wittig, Yisa Ginath Yuh, Kyle Yurkiw, Linda Vigilant, Alex K. Piel, Christophe Boesch, Hjalmar S. Kühl, Megan Y. Dennis, Tomas Marques-Bonet, Mimi Arandjelovic, Aida M. Andrés, 2025. “Local Genetic Adaptation to Habitat in Wild Chimpanzees.” Science 387 (6730): eadn7954. https://doi.org/10.1126/science.adn7954.
+
+Tuyisingize, Deogratias, Lars Kulik, Delagnon Assou, Diorne Zausa, Solange Kamga, Onella Mundi, Stefanie Heinicke, et al. 2025. “Complex Variation in Afrotropical Mammal Communities With Human Impact.” Ecology and Evolution 15 (5): e71331. https://doi.org/10.1002/ece3.71331.
+
+# 2024
+
+Arandjelovic, Mimi, Colleen R. Stephens, Paula Dieguez, Nuria Maldonado, Gaëlle Bocksberger, Marie-Lyne Després-Einspenner, Benjamin Debetencourt, Vittoria Estienne, Ammie K. Kalan, Maureen S. McCarthy, **Anne-Céline Granjon**, Veronika Städele, Briana Harder, Lucia Hacker, Anja Landsmann, Laura K. Lynn, Heidi Pfund, Zuzana Ročkaiová, Kristeena Sigler, Jane Widness, Heike Wilken, Antonio Buzharevski, Adeelia S. Goffe, Kristin Havercamp, Lydia L. Luncz, Giulia Sirianni, Erin G. Wessling, Roman M. Wittig, Christophe Boesch, Hjalmar S. Kühl. (2024) “Highly Precise Community Science Annotations of Video Camera-Trapped Fauna in Challenging Environments.” *Remote Sensing in Ecology and Conservation 10* (6): 702–24. https://doi.org/10.1002/rse2.402.
+
+Wang, Xueye, Gaëlle Bocksberger, Mimi Arandjelovic, Anthony Agbor, Samuel Angedakin, Floris Aubert, Emmanuel Ayuk Ayimisin,  Emma Bailey, Donatienne Barubiyo, Mattia Bessone, René Bobe, Matthieu Bonnet, Renée Boucher, Gregory Brazzola, Simon Brewer, Kevin C. Lee, Susana Carvalho, Rebecca Chancellor, Chloe Cipoletta, Heather Cohen, Sandi R. Copeland, Katherine Corogenes, Ana Maria Costa, Charlotte Coupland, Vicky M. Oelze. 2024. “Strontium Isoscape of Sub-Saharan Africa Allows Tracing Origins of Victims of the Transatlantic Slave Trade.” Nature Communications 15 (1): 10891. https://doi.org/10.1038/s41467-024-55256-0.
 
 # 2023
 
@@ -18,9 +40,9 @@ C. Fontsere, M. Kuhlwilm, C. Morcillo-Suarez, M. Alvarez-Estape, J. D. Lester, P
 
 # 2021
 
-C. D. Barratt, J. D. Lester, P. Gratton, R. E. Onstein, A. K. Kalan, M. S. McCarthy, G. Bocksberger, L. C. White, L. Vigilant, P. Dieguez, B. Abdulai, T. Aebischer, A. Agbor, A. K. Assumang, E. Bailey, M. Bessone, B. Buys, J. S. Carvalho, R. Chancellor, H. Cohen, E. Danquah, T. Deschner, Z. N. Dongmo, O. A. Doumbé, J. Dupain, C. S. Duvall, M. Eno‐Nku, G. Etoga, A. Galat‐Luong, R. Garriga, S. Gatti, A. Ghiurghi, A. Goedmakers, **A. Granjon**, D. Hakizimana, J. Head, D. Hedwig, I. Herbinger, V. Hermans, S. Jones, J. Junker, P. Kadam, M. Kambi, I. Kienast, C. Y. Kouakou, K. P. N′Goran, K. E. Langergraber, J. Lapuente, A. Laudisoit, K. C. Lee, F. Maisels, N. Mirghani, D. Moore, B. Morgan, D. Morgan, E. Neil, S. Nicholl, L. Nkembi, A. Ntongho, C. Orbell, L. J. Ormsby, L. Pacheco, A. K. Piel, L. Pintea, A. J. Plumptre, A. Rundus, C. Sanz, V. Sommer, T. Sop, F. A. Stewart, J. Sunderland‐Groves, N. Tagg, A. Todd, E. Ton, J. Van Schijndel, H. VanLeeuwe, E. Vendras, A. Welsh, J. F. C. Wenceslau, E. G. Wessling, J. Willie, R. M. Wittig, N. Yoshihiro, Y. G. Yuh, K. Yurkiw, C. Boesch, M. Arandjelovic, H. Kühl, Quantitative estimates of glacial refugia for chimpanzees ( *Pan troglodytes* ) since the Last Interglacial (120,000 BP). *American J Primatol* **83**, e23320 (2021).
+C. D. Barratt, J. D. Lester, P. Gratton, R. E. Onstein, A. K. Kalan, M. S. McCarthy, G. Bocksberger, L. C. White, L. Vigilant, P. Dieguez, B. Abdulai, T. Aebischer, A. Agbor, A. K. Assumang, E. Bailey, M. Bessone, B. Buys, J. S. Carvalho, R. Chancellor, H. Cohen, E. Danquah, T. Deschner, Z. N. Dongmo, O. A. Doumbé, J. Dupain, C. S. Duvall, M. Eno‐Nku, G. Etoga, A. Galat‐Luong, R. Garriga, S. Gatti, A. Ghiurghi, A. Goedmakers, **A. Granjon**, D. Hakizimana, J. Head, D. Hedwig, I. Herbinger, V. Hermans, S. Jones, J. Junker, P. Kadam, M. Kambi, I. Kienast, C. Y. Kouakou, K. P. N′Goran, K. E. Langergraber, J. Lapuente, A. Laudisoit, K. C. Lee, F. Maisels, N. Mirghani, D. Moore, B. Morgan, D. Morgan, E. Neil, S. Nicholl, L. Nkembi, A. Ntongho, C. Orbell, L. J. Ormsby, L. Pacheco, A. K. Piel, L. Pintea, A. J. Plumptre, A. Rundus, C. Sanz, V. Sommer, T. Sop, F. A. Stewart, J. Sunderland‐Groves, N. Tagg, A. Todd, E. Ton, J. Van Schijndel, H. VanLeeuwe, E. Vendras, A. Welsh, J. F. C. Wenceslau, E. G. Wessling, J. Willie, R. M. Wittig, N. Yoshihiro, Y. G. Yuh, K. Yurkiw, C. Boesch, M. Arandjelovic, H. Kühl, Quantitative estimates of glacial refugia for chimpanzees (Pan troglodytes) since the Last Interglacial (120,000 BP). *American J Primatol* **83**, e23320 (2021).
 
-C. P. Bueno De Mesquita, L. M. Nichols, M. J. Gebert, C. Vanderburgh, G. Bocksberger, J. D. Lester, A. K. Kalan, P. Dieguez, M. S. McCarthy, A. Agbor, P. Álvarez Varona, A. E. Ayimisin, M. Bessone, R. Chancellor, H. Cohen, C. Coupland, T. Deschner, V. E. Egbe, A. Goedmakers, A.-C. Granjon, C. C. Grueter, J. Head, R. A. Hernandez-Aguilar, K. J. Jeffery, S. Jones, P. Kadam, M. Kaiser, J. Lapuente, B. Larson, S. Marrocoli, D. Morgan, B. Mugerwa, F. Mulindahabi, E. Neil, P. Niyigaba, L. Pacheco, A. K. Piel, M. M. Robbins, A. Rundus, C. M. Sanz, L. Sciaky, D. Sheil, V. Sommer, F. A. Stewart, E. Ton, J. Van Schijndel, V. Vergnes, E. G. Wessling, R. M. Wittig, Y. Ginath Yuh, K. Yurkiw, K. Zuberbühler, J. F. Gogarten, A. Heintz-Buschart, A. N. Muellner-Riehl, C. Boesch, H. S. Kühl, N. Fierer, M. Arandjelovic, R. R. Dunn, Structure of Chimpanzee Gut Microbiomes across Tropical Africa. *mSystems* **6**, e01269-20 (2021).
+C. P. Bueno De Mesquita, L. M. Nichols, M. J. Gebert, C. Vanderburgh, G. Bocksberger, J. D. Lester, A. K. Kalan, P. Dieguez, M. S. McCarthy, A. Agbor, P. Álvarez Varona, A. E. Ayimisin, M. Bessone, R. Chancellor, H. Cohen, C. Coupland, T. Deschner, V. E. Egbe, A. Goedmakers, **A.-C. Granjon**, C. C. Grueter, J. Head, R. A. Hernandez-Aguilar, K. J. Jeffery, S. Jones, P. Kadam, M. Kaiser, J. Lapuente, B. Larson, S. Marrocoli, D. Morgan, B. Mugerwa, F. Mulindahabi, E. Neil, P. Niyigaba, L. Pacheco, A. K. Piel, M. M. Robbins, A. Rundus, C. M. Sanz, L. Sciaky, D. Sheil, V. Sommer, F. A. Stewart, E. Ton, J. Van Schijndel, V. Vergnes, E. G. Wessling, R. M. Wittig, Y. Ginath Yuh, K. Yurkiw, K. Zuberbühler, J. F. Gogarten, A. Heintz-Buschart, A. N. Muellner-Riehl, C. Boesch, H. S. Kühl, N. Fierer, M. Arandjelovic, R. R. Dunn, Structure of Chimpanzee Gut Microbiomes across Tropical Africa. *mSystems* **6**, e01269-20 (2021).
 
 C. Fontsere, M. Alvarez‐Estape, J. Lester, M. Arandjelovic, M. Kuhlwilm, P. Dieguez, A. Agbor, S. Angedakin, E. Ayuk Ayimisin, M. Bessone, G. Brazzola, T. Deschner, M. Eno‐Nku, **A. Granjon**, J. Head, P. Kadam, A. K. Kalan, M. Kambi, K. Langergraber, J. Lapuente, G. Maretti, L. Jayne Ormsby, A. Piel, M. M. Robbins, F. Stewart, V. Vergnes, R. M. Wittig, H. S. Kühl, T. Marques‐Bonet, D. A. Hughes, E. Lizano, Maximizing the acquisition of unique reads in noninvasive capture sequencing experiments. *Molecular Ecology Resources* **21**, 745–761 (2021).
 
@@ -29,8 +51,6 @@ A. K. Kalan, L. Kulik, M. Arandjelovic, C. Boesch, F. Haas, P. Dieguez, C. D. Ba
 J. D. Lester, L. Vigilant, P. Gratton, M. S. McCarthy, C. D. Barratt, P. Dieguez, A. Agbor, P. Álvarez-Varona, S. Angedakin, E. A. Ayimisin, E. Bailey, M. Bessone, G. Brazzola, R. Chancellor, H. Cohen, E. Danquah, T. Deschner, V. E. Egbe, M. Eno-Nku, A. Goedmakers, **A.-C. Granjon**, J. Head, D. Hedwig, R. A. Hernandez-Aguilar, K. J. Jeffery, S. Jones, J. Junker, P. Kadam, M. Kaiser, A. K. Kalan, L. Kehoe, I. Kienast, K. E. Langergraber, J. Lapuente, A. Laudisoit, K. Lee, S. Marrocoli, V. Mihindou, D. Morgan, G. Muhanguzi, E. Neil, S. Nicholl, C. Orbell, L. J. Ormsby, L. Pacheco, A. Piel, M. M. Robbins, A. Rundus, C. Sanz, L. Sciaky, A. M. Siaka, V. Städele, F. Stewart, N. Tagg, E. Ton, J. van Schijndel, M. K. Vyalengerera, E. G. Wessling, J. Willie, R. M. Wittig, Y. G. Yuh, K. Yurkiw, K. Zuberbuehler, C. Boesch, H. S. Kühl, M. Arandjelovic, Recent genetic connectivity and clinal variation in chimpanzees. *Commun Biol* **4**, 1–11 (2021).
 
 # 2020
-
-**A. ‐C. Granjon**, M. M. Robbins, J. Arinaitwe, M. R. Cranfield, W. Eckardt, I. Mburanumwe, A. Musana, A. M. Robbins, J. Roy, R. Sollmann, L. Vigilant, J. R. Hickey, Estimating abundance and growth rates in a wild mountain gorilla population. *Animal Conservation* **23**, 455–465 (2020).
 
 A. K. Kalan, L. Kulik, M. Arandjelovic, C. Boesch, F. Haas, P. Dieguez, C. D. Barratt, E. E. Abwe, A. Agbor, S. Angedakin, F. Aubert, E. A. Ayimisin, E. Bailey, M. Bessone, G. Brazzola, V. E. Buh, R. Chancellor, H. Cohen, C. Coupland, B. Curran, E. Danquah, T. Deschner, D. Dowd, M. Eno-Nku, J. Michael Fay, A. Goedmakers, **A.-C. Granjon**, J. Head, D. Hedwig, V. Hermans, K. J. Jeffery, S. Jones, J. Junker, P. Kadam, M. Kambi, I. Kienast, D. Kujirakwinja, K. E. Langergraber, J. Lapuente, B. Larson, K. C. Lee, V. Leinert, M. Llana, S. Marrocoli, A. C. Meier, B. Morgan, D. Morgan, E. Neil, S. Nicholl, E. Normand, L. J. Ormsby, L. Pacheco, A. Piel, J. Preece, M. M. Robbins, A. Rundus, C. Sanz, V. Sommer, F. Stewart, N. Tagg, C. Tennie, V. Vergnes, A. Welsh, E. G. Wessling, J. Willie, R. M. Wittig, Y. G. Yuh, K. Zuberbühler, H. S. Kühl, Environmental variability supports chimpanzee behavioural diversity. *Nat Commun* **11**, 4451 (2020).
 
@@ -52,13 +72,9 @@ K. Kalan, G. Hohmann, M. Arandjelovic, C. Boesch, M. S. McCarthy, A. Agbor, S. A
 
 N. Tagg, M. McCarthy, P. Dieguez, G. Bocksberger, J. Willie, R. Mundry, F. Stewart, M. Arandjelovic, J. Widness, A. Landsmann, A. Agbor, S. Angedakin, A. E. Ayimisin, M. Bessone, G. Brazzola, K. Corogenes, T. Deschner, E. Dilambaka, M. Eno‐Nku, H. Eshuis, A. Goedmakers, **A. Granjon**, J. Head, V. Hermans, S. Jones, P. Kadam, M. Kambi, K. E. Langergraber, V. Lapeyre, J. Lapuente, K. Lee, V. Leinert, G. Maretti, S. Marrocoli, A. Meier, S. Nicholl, E. Normand, L. J. Ormsby, A. Piel, O. Robinson, V. Sommer, M. Ter Heegde, A. Tickle, E. Ton, J. Van Schijndel, H. Vanleeuwe, V. Vergnes, E. Wessling, R. M. Wittig, K. Zuberbuehler, H. Kuehl, C. Boesch, Nocturnal activity in wild chimpanzees ( *Pan troglodytes* ): Evidence for flexible sleeping patterns and insights into human evolution. *American J Phys Anthropol* **166**, 510–529 (2018).
 
-# 2018
-
-C. Hoffmann, F. Zimmermann, R. Biek, H. Kuehl, K. Nowak, R. Mundry, A. Agbor, S. Angedakin, M. Arandjelovic, A. Blankenburg, G. Brazolla, K. Corogenes, E. Couacy-Hymann, T. Deschner, P. Dieguez, K. Dierks, A. Düx, S. Dupke, H. Eshuis, P. Formenty, Y. G. Yuh, A. Goedmakers, J. F. Gogarten, **A.-C. Granjon**, S. McGraw, R. Grunow, J. Hart, S. Jones, J. Junker, J. Kiang, K. Langergraber, J. Lapuente, K. Lee, S. A. Leendertz, F. Léguillon, V. Leinert, T. Löhrich, S. Marrocoli, K. Mätz-Rensing, A. Meier, K. Merkel, S. Metzger, M. Murai, S. Niedorf, H. De Nys, A. Sachse, J. van Schijndel, U. Thiesen, E. Ton, D. Wu, L. H. Wieler, C. Boesch, S. R. Klee, R. M. Wittig, S. Calvignac-Spencer, F. H. Leendertz, Persistent anthrax as a major driver of wildlife mortality in a tropical rainforest. *Nature* **548**, 82–86 (2017).
-
 # 2017
 
-**A.-C. Granjon**, C. Rowney, L. Vigilant, K. E. Langergraber, Evaluating genetic capture-recapture using a chimpanzee population of known size. *The Journal of Wildlife Management* **81**, 279–288 (2017).
+C. Hoffmann, F. Zimmermann, R. Biek, H. Kuehl, K. Nowak, R. Mundry, A. Agbor, S. Angedakin, M. Arandjelovic, A. Blankenburg, G. Brazolla, K. Corogenes, E. Couacy-Hymann, T. Deschner, P. Dieguez, K. Dierks, A. Düx, S. Dupke, H. Eshuis, P. Formenty, Y. G. Yuh, A. Goedmakers, J. F. Gogarten, **A.-C. Granjon**, S. McGraw, R. Grunow, J. Hart, S. Jones, J. Junker, J. Kiang, K. Langergraber, J. Lapuente, K. Lee, S. A. Leendertz, F. Léguillon, V. Leinert, T. Löhrich, S. Marrocoli, K. Mätz-Rensing, A. Meier, K. Merkel, S. Metzger, M. Murai, S. Niedorf, H. De Nys, A. Sachse, J. van Schijndel, U. Thiesen, E. Ton, D. Wu, L. H. Wieler, C. Boesch, S. R. Klee, R. M. Wittig, S. Calvignac-Spencer, F. H. Leendertz, Persistent anthrax as a major driver of wildlife mortality in a tropical rainforest. *Nature* **548**, 82–86 (2017).
 
 # Report
 
