added society memberships

--- a/cv.qmd
+++ b/cv.qmd
@@ -49,6 +49,8 @@ toc: false
 
 # Society Memberships:
 
+-   Société Francaise d'Écologie et d'Évolution (SFE2)
+-   Deutsche Zoologische Gesellschaft (DZG)
 
 
 
