Updated field work, outreach, added supervision section

--- a/cv.qmd
+++ b/cv.qmd
@@ -44,7 +44,7 @@ toc: false
 
 ## 2024
 
--   sDiv PostDoc Call: 130,000€
+-   sDiv PostDoc Call: 130,000€ (ranked 1st among 20 proposals)
 
 # Society Memberships:
 
@@ -53,10 +53,20 @@ toc: false
 
 # Skills
 
--   Field work (total 26 months during PhD research and university education)
 -   Statistics (Linear Mixed Models, Capture-Mark-Recapture)
 -   Lab work (DNA extraction, DNA amplification, microsatellite genotyping)
 -   Languages: French (native), English (fluent), German (fluent)
+
+# Field work
+
+## 2015 – 2016: 
+Seven months PhD field research, Virunga Massif, Rwanda, DRC and Uganda. Sample collection, training of field assistants, team supervision, management of sampling supplies and samples for the Virunga Massif gorilla census.
+
+## 2013-2014: 
+Twelve months field assistant, Pan African Programme: the cultured chimpanzee (PanAf), Loango National Park, Gabon. Field site manager, organization and collection of ecological data and organic materials on chimpanzee behaviour and habitat. Habituation of wild chimpanzees and gorillas.
+
+## 2011: 
+Three months volunteer team leader. Bird nest monitoring of great tits (Parus major). Center for Evolutionary and Functional Ecology (CEFE), Montpellier. Team coordination and weekly monitoring of nest status, egg count and chick development for one field site.
 
 # Teaching
 
@@ -72,10 +82,41 @@ Spring 2018: Lectures and practical sessions. Bachelor- & Master module “Stati
 
 2015-2016: Training and supervision of ca. 100 field assistants from DRC, Rwanda and Uganda. Led by Dr. Jena Hickey & Anne-Céline Granjon
 
+# Supervision of Researchers in Early Career Phases 
+
+-   2025: Supervision of four Master students in a group project within the Macroecology Module, Leipzig University.
+
+-   2011: Supervision of an undergraduate student’s internship at Harvard University.
+
+
+
+# Contributions to the Scientific Society
+
+-   Reviews: Journal of Wildlife Management , Molecular Ecology
+-   Proposal evaluation: Flexpool call (iDiv)
+
 
 # Outreach
 
 2021. Interview with YouTube Channel Science vs. Fiction.  Godzilla vs. Kong: Warum Größe nicht alles ist! (Science vs. Fiction feat. @CinemaStrikesBack). https://www.youtube.com/watch?v=1hwxQcYSEh4
-2.	Granjon, A.-C. 2022. “1063 Berggorillas - was bedeutet die Zahl?”. Invited Speaker, Mitgliederversammlung des Berggorilla und Regenwald Direkthilfe e.V. 2022, Hannover, Germany. 
-3.	Granjon, A.-C. 2020. “1063 Berggorillas - was bedeutet die Zahl?”. Invited contribution. Gorilla Journal 60, 1/2020. 
-5.	Granjon, A.-C. 2017. “Von Kacke zu Naturschutz”. Science Slam, Tag der Promovierende 2017, Research Academy Leipzig.
+
+2022. Invited Speaker	“1063 Berggorillas - was bedeutet die Zahl?”. Mitgliederversammlung des Berggorilla und Regenwald Direkthilfe e.V. 2022, Hannover, Germany. 
+
+2020. Invited journal contribution.  “1063 Berggorillas - was bedeutet die Zahl?”. Gorilla Journal 60, 1/2020. 
+
+2017. Science Slam “Von Kacke zu Naturschutz”. Tag der Promovierende 2017, Research Academy Leipzig.
+
+# Translations
+
+## 2024-today: 
+Various articles for the Gorilla Journal (non-scientific, English to French, French to English).
+
+## 2023: 
+Complete translation of the BonDiv protocol (150p. English to French).
+
+## 2015-2019: 
+Various proposals and reports (English and German to French) for the MPI-EVA.
+
+## 2012-2013: 
+Selected chapters of the PanAf field protocol (English to French).
+
