--- a/cv.qmd
+++ b/cv.qmd
@@ -8,7 +8,7 @@ toc: false
 
 ## **Feb. 2024-Feb. 2026**
 
--   Individual Post-Doctoral Position, sDiv Synthesis Center, German Center for intergrative Biodiversity Research (iDiv) Halle-Jena-Leipzig. Project title: "Unraveling the relationship between genetic diversity, the latitudinal gradient in biodiversity, and life-history strategies". Supervision: Chloé Schmidt, Michael Gerth, Jonathan Chase.
+-   Individual Post-Doctoral Position, sDiv Synthesis Center, German Center for integrative Biodiversity Research (iDiv) Halle-Jena-Leipzig. Project title: "Unraveling the relationship between genetic diversity, the latitudinal gradient in biodiversity, and life-history strategies". Supervision: Chloé Schmidt, Michael Gerth, Jonathan Chase.
 
 ## 2020-2024
 
@@ -59,64 +59,75 @@ toc: false
 
 # Field work
 
-## 2015 – 2016: 
+## 2015 – 2016:
+
 Seven months PhD field research, Virunga Massif, Rwanda, DRC and Uganda. Sample collection, training of field assistants, team supervision, management of sampling supplies and samples for the Virunga Massif gorilla census.
 
-## 2013-2014: 
+## 2013-2014:
+
 Twelve months field assistant, Pan African Programme: the cultured chimpanzee (PanAf), Loango National Park, Gabon. Field site manager, organization and collection of ecological data and organic materials on chimpanzee behaviour and habitat. Habituation of wild chimpanzees and gorillas.
 
-## 2011: 
+## 2011:
+
 Three months volunteer team leader. Bird nest monitoring of great tits (Parus major). Center for Evolutionary and Functional Ecology (CEFE), Montpellier. Team coordination and weekly monitoring of nest status, egg count and chick development for one field site.
 
 # Teaching
 
-Spring 2025: Lecture and practical sessions, “Introduction to Macrogenetics”, Master module “Macroecology”, Leipzig University. Led by Dr. Marten Winter.
+-   Spring 2025: Lecture and practical sessions, “Introduction to Macrogenetics”, Master module “Macroecology”, Leipzig University. Led by Dr. Marten Winter.
 
-Spring 2024: Lectures and practical sessions, “Introduction to Genetic Marc-Recapture”, “Introduction to R", Bachelor Module “Conservation Genetics”, Johannes Gutenberg University Mainz. Led by Prof. Laura Hagemann.
+-   Spring 2024: Lectures and practical sessions, “Introduction to Genetic Marc-Recapture”, “Introduction to R", Bachelor Module “Conservation Genetics”, Johannes Gutenberg University Mainz. Led by Prof. Laura Hagemann.
 
-July 2023: Training of ca 15 field assistants and team leaders, BonDiv Project, Kinshasa, DRC. PIs: Prof. Hjalmar Kühl, Dr. Erin Wessling, Dr. Martin Surbeck.
+-   July 2023: Training of ca 15 field assistants and team leaders, BonDiv Project, Kinshasa, DRC. PIs: Prof. Hjalmar Kühl, Dr. Erin Wessling, Dr. Martin Surbeck.
 
-Fall 2018: Teaching Assistant. “Tutorial”, Bachelor module “Genetik I für Informatiker”. Leipzig University. Led by Dr. Bert Klagges.
+-   Fall 2018: Teaching Assistant. “Tutorial”, Bachelor module “Genetik I für Informatiker”. Leipzig University. Led by Dr. Bert Klagges.
 
-Spring 2018: Lectures and practical sessions. Bachelor- & Master module “Statistik”. Leipzig University. Led by Dr. Brigitte Schlögl.
+-   Spring 2018: Lectures and practical sessions. Bachelor- & Master module “Statistik”. Leipzig University. Led by Dr. Brigitte Schlögl.
 
-2015-2016: Training and supervision of ca. 100 field assistants from DRC, Rwanda and Uganda. Led by Dr. Jena Hickey & Anne-Céline Granjon
+-   2015-2016: Training and supervision of ca. 100 field assistants from DRC, Rwanda and Uganda. Led by Dr. Jena Hickey & Anne-Céline Granjon
 
-# Supervision of Researchers in Early Career Phases 
+# Supervision of Researchers in Early Career Phases
 
 -   2025: Supervision of four Master students in a group project within the Macroecology Module, Leipzig University.
 
 -   2011: Supervision of an undergraduate student’s internship at Harvard University.
-
-
 
 # Contributions to the Scientific Society
 
 -   Reviews: Journal of Wildlife Management , Molecular Ecology
 -   Proposal evaluation: Flexpool call (iDiv)
 
-
 # Outreach
 
-2021. Interview with YouTube Channel Science vs. Fiction.  Godzilla vs. Kong: Warum Größe nicht alles ist! (Science vs. Fiction feat. @CinemaStrikesBack). https://www.youtube.com/watch?v=1hwxQcYSEh4
+-   
 
-2022. Invited Speaker	“1063 Berggorillas - was bedeutet die Zahl?”. Mitgliederversammlung des Berggorilla und Regenwald Direkthilfe e.V. 2022, Hannover, Germany. 
+    2021. Interview with YouTube Channel Science vs. Fiction. Godzilla vs. Kong: Warum Größe nicht alles ist! (Science vs. Fiction feat. @CinemaStrikesBack). https://www.youtube.com/watch?v=1hwxQcYSEh4
 
-2020. Invited journal contribution.  “1063 Berggorillas - was bedeutet die Zahl?”. Gorilla Journal 60, 1/2020. 
+-   
 
-2017. Science Slam “Von Kacke zu Naturschutz”. Tag der Promovierende 2017, Research Academy Leipzig.
+    2022. Invited Speaker “1063 Berggorillas - was bedeutet die Zahl?”. Mitgliederversammlung des Berggorilla und Regenwald Direkthilfe e.V. 2022, Hannover, Germany.
+
+-   
+
+    2023. Invited journal contribution. “1063 Berggorillas - was bedeutet die Zahl?”. Gorilla Journal 60, 1/2020.
+
+-   
+
+    2024. Science Slam “Von Kacke zu Naturschutz”. Tag der Promovierende 2017, Research Academy Leipzig.
 
 # Translations
 
-## 2024-today: 
+## 2024-today:
+
 Various articles for the Gorilla Journal (non-scientific, English to French, French to English).
 
-## 2023: 
+## 2023:
+
 Complete translation of the BonDiv protocol (150p. English to French).
 
-## 2015-2019: 
+## 2015-2019:
+
 Various proposals and reports (English and German to French) for the MPI-EVA.
 
-## 2012-2013: 
-Selected chapters of the PanAf field protocol (English to French).
+## 2012-2013:
 
+Selected chapters of the PanAf field protocol (English to French).
